@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PackageDefinition xsi:schemaLocation="http://www.buildamation.com ./Schema/BamPackageDefinitionV1.xsd" name="Test18" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.buildamation.com">
   <Dependents>
-    <Package name="Clang" version="Apple425" />
+    <Package name="Clang" version="Xcode4" />
     <Package name="Gcc" version="4.8" />
     <Package name="NativeBuilder" />
     <Package name="VisualC" version="12.0" />
